--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <!--<h1 class="h0">Модный<br>
           <span class="text-primary">диалог</span>
         </h1>-->
-        <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов с
-          бизнесом</div>
+        <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Открытый диалог с городом
+          по ключевым отраслевым проблемам</div>
         <!--<div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
           <div>
             Площадка Community,<br>
