--- a/index.html
+++ b/index.html
@@ -80,6 +80,38 @@
     </div>
   </section>
   <!-- Конец блока -->
+  <!-- Конец блока -->
+  <section class="wrapper px-0 md:px-7.5 lg:px-12.5 overflow-visible">
+    <div
+      class="container !px-0 !py-0 font-secondary mb-5 md:mb-7.5 lg:mb-10 bg-cover bg-top rounded-none md:rounded-[34px] overflow-visible"
+      style="background-image: url(./img/top-banner-fashion.jpg);">
+      <div
+        class="px-7.5 lg:px-12.5 pt-12.5 md:pt-17.5 lg:pt-25 pb-5 md:pb-7.5 lg:pb-10 bg-gradient-to-r from-black to-transparent space-y-5 lg:space-y-7.5">
+        <img class="absolute -top-[20px] md:-top-[35px] lg:-top-[60px] w-[140px] md:w-[230px] lg:w-[370px]"
+          src="./img/bizgov.svg" alt="">
+        <h1 class="h0">Модный<br>
+          <span class="text-primary">диалог</span>
+        </h1>
+        <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов с
+          бизнесом</div>
+        <div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
+          <div>
+            Площадка Community,<br>
+            Космодамианская наб., 2
+          </div>
+          <div>
+            26 апреля<br>
+            15:30-17:30
+          </div>
+        </div>
+        <!-- <div>Раменский бульвар, дом 1<br>
+            11 апреля, 16:00</div> -->
+        <a href="#request"
+          class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white">Зарегистрироваться</a>
+      </div>
+    </div>
+  </section>
+  <!-- Конец блока -->
   <!-- Начало блока -->
   <footer class="wrapper">
     <div class="container flex gap-5 border-t border-white rounded-none text-small font-bold">
