--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
             <span class="text-primary">диалог</span>
           </h1>
           <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов
-            с
-            бизнесом</div>
+            с бизнесом</div>
           <div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
             <div>
               Площадка Community,<br>
@@ -105,6 +104,25 @@
             15:30-17:30
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+  <!-- Конец блока -->
+  <!-- Начало блока -->
+  <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
+    <div class="container border border-purple-500 rounded-[20px] md:rounded-[34px]">
+      <h2>Как это было</h2>
+      <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
+        <a href="" target="_blank"><img src="./img/events_01.png"
+            class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
+        <div class="h3 font-semibold mt-5 mb-5">Встреча с технологическими предпринимателями</div>
+        <div>1 апреля 2023 года. ИНТЦ «Ломоносов»</div>
+      </div>
+      <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
+        <a href="" target="_blank"><img src="./img/events_02.png"
+            class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
+        <div class="h3 font-semibold mb-5 mt-5">Встреча с экспортерами</div>
+        <div>21 марта 2023 года. Цифровое деловое пространство</div>
       </div>
     </div>
   </section>
