--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
         class="px-7.5 lg:px-12.5 pt-12.5 md:pt-17.5 lg:pt-25 pb-5 md:pb-7.5 lg:pb-10 bg-gradient-to-r from-black to-transparent space-y-5 lg:space-y-7.5">
         <img class="absolute -top-[20px] md:-top-[35px] lg:-top-[60px] w-[140px] md:w-[230px] lg:w-[370px]"
           src="./img/bizgov.svg" alt="">
-        <!--<h1 class="h0">Модный<br>
-          <span class="text-primary">диалог</span>
-        </h1>-->
+        <div class="opacity-0" style="opacity:0">
+          <h1 class="h0">Открытый<br>
+            модный<br>
+            диалог<br>
+            с городом
+          </h1>
+        </div>
         <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Открытый диалог с городом
           по ключевым отраслевым проблемам</div>
         <!--<div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
