--- a/index.html
+++ b/index.html
@@ -117,13 +117,19 @@
     <div class="container border border-purple-500 rounded-[20px] md:rounded-[34px]">
       <h2>Как это было</h2>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
-        <a href="" target="_blank"><img src="./img/events_01.png"
+        <a href="" target="_blank"><img src="./img/eventsnew_01.png"
             class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
-        <div class="h3 font-semibold mt-5 mb-5">Встреча с технологическими предпринимателями</div>
-        <div>1 апреля 2023 года. ИНТЦ «Ломоносов»</div>
+        <div class="h3 font-semibold mt-5 mb-5">Будущее креативных индустрий</div>
+        <div>28 апреля, Центральный дом предпринимателя</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
-        <a href="" target="_blank"><img src="./img/events_02.png"
+        <a href="" target="_blank"><img src="./img/eventsnew_02.png"
+            class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
+        <div class="h3 font-semibold mt-5 mb-5">Встреча с технологическими предпринимателями</div>
+        <div>28 апреля, Центральный дом предпринимателя</div>
+      </div>
+      <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
+        <a href="" target="_blank"><img src="./img/eventsnew_03.png"
             class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
         <div class="h3 font-semibold mb-5 mt-5">Встреча с экспортерами</div>
         <div>21 марта 2023 года. Цифровое деловое пространство</div>
