--- a/index.html
+++ b/index.html
@@ -89,24 +89,31 @@
     <div class="container purple-bg">
       <h2>Ближайшие мероприятия</h2>
       <div
-        class="container !px-0 !py-0 font-secondary mb-5 md:mb-7.5 lg:mb-10 bg-cover bg-top rounded-[20px] md:rounded-[34px] overflow-visible"
-        style="background-image: url(./img/top-banner-fashion.jpg);">
+        class="container !px-0 !py-0 font-secondary mb-5 md:mb-7.5 lg:mb-10 bg-cover bg-top rounded-none md:rounded-[34px] overflow-visible"
+        style="background-image: url(./img/top-banner-social.jpg);">
         <div
           class="px-7.5 lg:px-12.5 pt-12.5 md:pt-17.5 lg:pt-25 pb-5 md:pb-7.5 lg:pb-10 bg-gradient-to-r from-black to-transparent space-y-5 lg:space-y-7.5">
-          <h1 class="h0">Модный<br>
-            <span class="text-primary">диалог</span>
+          <img class="absolute -top-[20px] md:-top-[35px] lg:-top-[60px] w-[140px] md:w-[230px] lg:w-[370px]"
+            src="./img/bizgov.svg" alt="">
+          <h1 class="h0">Социальное предпринимательство:<br>
+            особое внимание города
           </h1>
-          <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов
-            с бизнесом</div>
+          <!-- <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Социальное предпринимательство:<br>
+        особое внимание города</div> -->
           <div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
             <div>
-              Площадка Community,<br>
-              Космодамианская наб., 2
+              Цифровое деловое пространство<br>
+              ул. Покровка, д. 47
+            </div>
+            <div>
+              17 Мая,<br>
+              15.00-19.00
             </div>
           </div>
-          <div>26 апреля<br>
-            15:30-17:30
-          </div>
+          <!-- <div>Раменский бульвар, дом 1<br>
+                11 апреля, 16:00</div> -->
+          <a href="#"
+            class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white">Зарегистрироваться</a>
         </div>
       </div>
     </div>
