--- a/index.html
+++ b/index.html
@@ -93,11 +93,8 @@
         style="background-image: url(./img/top-banner-social.jpg);">
         <div
           class="px-7.5 lg:px-12.5 pt-12.5 md:pt-17.5 lg:pt-25 pb-5 md:pb-7.5 lg:pb-10 bg-gradient-to-r from-black to-transparent space-y-5 lg:space-y-7.5">
-          <h2 class="h0">Социальное <br>предпринимательство:<br>
-            особое внимание города
-          </h2>
-          <!-- <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Социальное предпринимательство:<br>
-        особое внимание города</div> -->
+          <h3 class="font-semibold md:max-w-[75%] lg:max-w-[50%]">Социальное <br>предпринимательство:<br>
+            особое внимание города</h3>
           <div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
             <div>
               Цифровое деловое пространство<br>
