--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Бизнес говорит – Модный диалог</title>
-  <link rel="stylesheet" href="./css/style.css?v=23042002">
+  <title>Открытый диалог с городом по ключевым отраслевым проблемам</title>
+  <link rel="stylesheet" href="./css/style.css?v=23050401">
   <link rel="stylesheet" href="./css/swiper-bundle.min.css?v=27042023">
 
   <!-- Yandex.Metrika counter -->
@@ -50,37 +50,15 @@
   <!-- Начало блока -->
   <!-- Конец блока -->
   <section class="wrapper px-0 md:px-7.5 lg:px-12.5 overflow-visible">
-    <div
-      class="container !px-0 !py-0 font-secondary mb-5 md:mb-7.5 lg:mb-10 bg-cover bg-top rounded-none md:rounded-[34px] overflow-visible"
-      style="background-image: url(./img/top_banner_business.png);">
-      <div
-        class="px-7.5 lg:px-12.5 pt-12.5 md:pt-17.5 lg:pt-25 pb-5 md:pb-7.5 lg:pb-10 bg-gradient-to-r from-black to-transparent space-y-5 lg:space-y-7.5">
-        <img class="absolute -top-[20px] md:-top-[35px] lg:-top-[60px] w-[140px] md:w-[230px] lg:w-[370px]"
+    <div class="container h-0 !px-0 !pt-0 !pb-[50%] font-secondary mb-5 md:mb-7.5 lg:mb-10 overflow-visible">
+      <div class="px-7.5 lg:px-12.5 pt-12.5 md:pt-17.5 lg:pt-25 pb-5 md:pb-7.5 lg:pb-10">
+        <img class="absolute -top-[20px] md:-top-[35px] lg:-top-[60px] w-[140px] md:w-[230px] lg:w-[370px] z-20"
           src="./img/bizgov.svg" alt="">
-        <div class="opacity-0" style="opacity:0">
-          <h1 class="h0">Открытый<br>
-            модный<br>
-            диалог<br>
-            с городом
-          </h1>
-        </div>
-        <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Открытый диалог с городом
-          по ключевым отраслевым проблемам</div>
-        <!--<div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
-          <div>
-            Площадка Community,<br>
-            Космодамианская наб., 2
-          </div>
-          <div>
-            26 апреля<br>
-            15:30-17:30
-          </div>
-        </div>-->
-        <!-- <div>Раменский бульвар, дом 1<br>
-          11 апреля, 16:00</div> -->
-        <!--<a href="#request"
-          class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white">Зарегистрироваться</a>-->
       </div>
+      <iframe
+        class="absolute top-0 left-0 w-full h-full object-cover z-10 rounded-none md:rounded-[34px] overflow-hidden"
+        src="https://rutube.ru/play/embed/9ac5910854ed8ca84ef4c26941ade8f9" frameBorder="0"
+        allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     </div>
   </section>
   <!-- Конец блока -->
@@ -91,7 +69,7 @@
       <div
         class="container px-0 py-0 font-secondary mb-5 md:mb-7.5 lg:mb-10 bg-cover bg-top rounded-none md:rounded-[34px] overflow-visible"
         style="background-image: url(./img/top-banner-social.jpg);">
-        <div class="px-7.5 lg:px-12.5 pt-12.5 md:pt-17.5 lg:pt-25 pb-5 md:pb-7.5 lg:pb-10 space-y-5 lg:space-y-7.5">
+        <div class="px-7.5 lg:px-12.5 py-12.5 md:py-17.5 lg:py-25 space-y-7.5 lg:space-y-10">
           <h3 class="font-semibold md:max-w-[75%] lg:max-w-[50%]">Социальное <br>предпринимательство:<br>
             особое внимание города</h3>
           <div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
@@ -106,8 +84,9 @@
           </div>
           <!-- <div>Раменский бульвар, дом 1<br>
                 11 апреля, 16:00</div> -->
-          <a href="#"
-            class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white">Зарегистрироваться</a>
+          <a href="https://moscow.business/social/#request"
+            class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white"
+            target="_blank">Зарегистрироваться</a>
         </div>
       </div>
     </div>
@@ -115,19 +94,19 @@
   <!-- Конец блока -->
   <!-- Начало блока -->
   <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
-    <div class="container border border-purple-500 rounded-[20px] md:rounded-[34px]">
+    <div class="container border border-primary rounded-[20px] md:rounded-[34px]">
       <h2>Как это было</h2>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/creative/" target="_blank"><img src="./img/eventsnew_01.png"
             class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
         <div class="h3 font-semibold mt-5 mb-5">Будущее креативных индустрий</div>
-        <div>28 апреля, Центральный дом предпринимателя</div>
+        <div>26 апреля, Площадка Community, Космодамианская наб., 2</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/innovations/" target="_blank"><img src="./img/eventsnew_02.png"
             class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
         <div class="h3 font-semibold mt-5 mb-5">Встреча с технологическими предпринимателями</div>
-        <div>28 апреля, Центральный дом предпринимателя</div>
+        <div>11 апреля, Кластер «Ломоносов» ИНТЦ МГУ «Воробьёвы горы»</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://www.moscow-export.com/biznes-govorit/" target="_blank"><img src="./img/eventsnew_03.png"
@@ -149,7 +128,7 @@
   <!-- Конец блока -->
 
   <script src="./js/swiper-bundle.min.js?v=27042023"></script>
-  <script src="./js/common.js?v=27042023"></script>
+  <script src="./js/common.js?v=23050401"></script>
 </body>
 
 </html>
