--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         class="container px-0 py-0 font-secondary mb-5 md:mb-7.5 lg:mb-10 bg-cover bg-top rounded-none md:rounded-[34px] overflow-visible"
         style="background-image: url(./img/top-banner-social.jpg);">
         <div class="px-7.5 lg:px-12.5 py-12.5 md:py-17.5 lg:py-25 space-y-7.5 lg:space-y-10">
-          <h3 class="font-semibold md:max-w-[75%] lg:max-w-[50%]">Социальное <br>предпринимательство:<br>
-            особое внимание города</h3>
+          <h3 class="font-semibold md:max-w-[75%] lg:max-w-[50%]">Социальное <br>предпринимательство</h3>
           <div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
             <div>
               Цифровое деловое пространство<br>
