--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </section>
   <!-- Конец блока -->
   <!-- Начало блока -->
-  <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
+  <!-- <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
     <div class="container purple-bg">
       <h2>Ближайшие мероприятия</h2>
       <div
@@ -86,20 +86,26 @@
               13:00–16:30
             </div>
           </div>
-          <!-- <div>Раменский бульвар, дом 1<br>
-                11 апреля, 16:00</div> -->
+          <div>Раменский бульвар, дом 1<br>
+                11 апреля, 16:00</div>
           <a href="https://moscow.business/social/#request"
             class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white"
             target="_blank">Зарегистрироваться</a>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Конец блока -->
   <!-- Начало блока -->
   <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
     <div class="container border border-primary rounded-[20px] md:rounded-[34px]">
       <h2>Как это было</h2>
+      <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
+        <a href="https://moscow.business/social/" target="_blank"><img src="./img/eventsnew_04.png"
+            class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
+        <div class="h3 font-semibold mt-5 mb-5">Социальное предпринимательство</div>
+        <div>19 мая, Цифровое деловое пространство, ул. Покровка, д. 47</div>
+      </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/creative/" target="_blank"><img src="./img/eventsnew_01.png"
             class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
