--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Открытый диалог с городом по ключевым отраслевым проблемам</title>
-  <link rel="stylesheet" href="./css/style.css?v=23051002">
-  <link rel="stylesheet" href="./css/swiper-bundle.min.css?v=27042023">
+  <link rel="stylesheet" href="./css/style.css?v=23062101">
+  <link rel="stylesheet" href="./css/swiper-bundle.min.css?v=23062101">
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -32,10 +32,10 @@
   </noscript>
   <!-- /Yandex.Metrika counter -->
 
-  <script src="./js/jquery.min.js?v=27042023"></script>
-  <script src="./js/jquery.mask.min.js?v=27042023"></script>
-  <script src="./js/track-cookies.js?v=27042023"></script>
-  <script src="./js/create-object.js?v=27042023"></script>
+  <script src="./js/jquery.min.js?v=23062101"></script>
+  <script src="./js/jquery.mask.min.js?v=23062101"></script>
+  <script src="./js/track-cookies.js?v=23062101"></script>
+  <script src="./js/create-object.js?v=23062101"></script>
 </head>
 
 <body>
@@ -68,37 +68,41 @@
   </section>
   <!-- Конец блока -->
   <!-- Начало блока -->
-  <!-- <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
-    <div class="container purple-bg">
+  <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
+    <div class="container pink-bg">
       <h2>Ближайшие мероприятия</h2>
       <div
-        class="container px-0 py-0 font-secondary mb-5 md:mb-7.5 lg:mb-10 bg-cover bg-top rounded-none md:rounded-[34px] overflow-visible"
-        style="background-image: url(./img/top-banner-social.jpg);">
-        <div class="px-7.5 lg:px-12.5 py-12.5 md:py-17.5 lg:py-25 space-y-7.5 lg:space-y-10">
-          <h3 class="font-semibold md:max-w-[75%] lg:max-w-[50%]">Социальное <br>предпринимательство</h3>
-          <div class="flex md:flex-col lg:flex-row gap-y-5 gap-x-12.5 lg:gap-x-20 !mt-10 lg:!mt-20">
+        class="container !px-0 !py-0 font-secondary my-5 md:my-7.5 lg:my-10 bg-cover bg-top rounded-none md:rounded-[34px] overflow-hidden"
+        style="background-image: url(./img/top-banner-nalog.jpg);">
+        <div
+          class="px-7.5 lg:px-12.5 py-10 lg:py-15 bg-gradient-to-r from-black to-transparent space-y-7.5 lg:space-y-15">
+          <img class="w-[140px] md:w-[230px] lg:w-[300px]" src="./img/bizgov.svg" alt="">
+          <h1 class="-ml-5">
+            <p class="pink-bg px-5 leading-tight inline-block">ЕНС и АУСН</p>
+            <p class="px-5">новый порядок</p>
+          </h1>
+          <!-- <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов с
+                бизнесом</div> -->
+          <div class="flex flex-col lg:flex-row gap-y-5 lg:gap-x-20 !mt-10 lg:!mt-20">
             <div>
-              Цифровое деловое пространство<br>
-              ул. Покровка, д. 47
+              Большая Тульская улица,<br>
+              дом 15
             </div>
             <div>
-              19 Мая,<br>
-              13:00–16:30
+              27 июня<br>
+              с 15:30 по 17:45
             </div>
           </div>
-          <div>Раменский бульвар, дом 1<br>
-                11 апреля, 16:00</div>
-          <a href="https://moscow.business/social/#request"
-            class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white"
-            target="_blank">Зарегистрироваться</a>
+          <a href="#" target="_blank"
+            class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white">Зарегистрироваться</a>
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
   <!-- Конец блока -->
   <!-- Начало блока -->
   <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
-    <div class="container border border-primary rounded-[20px] md:rounded-[34px]">
+    <div class="container border border-pink rounded-[20px] md:rounded-[34px]">
       <h2>Как это было</h2>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/social/" target="_blank"><img src="./img/eventsnew_04.png"
@@ -137,8 +141,8 @@
   </footer>
   <!-- Конец блока -->
 
-  <script src="./js/swiper-bundle.min.js?v=27042023"></script>
-  <script src="./js/common.js?v=23051002"></script>
+  <script src="./js/swiper-bundle.min.js?v=23062101"></script>
+  <script src="./js/common.js?v=23062101"></script>
 </body>
 
 </html>
