--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               с 15:30 по 17:45
             </div>
           </div>
-          <a href="#" target="_blank"
+          <a href="https://moscow.business/nalog/" target="_blank"
             class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white">Зарегистрироваться</a>
         </div>
       </div>
