--- a/index.html
+++ b/index.html
@@ -105,26 +105,26 @@
     <div class="container border border-pink rounded-[20px] md:rounded-[34px]">
       <h2>Как это было</h2>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
-        <a href="https://moscow.business/social/" target="_blank"><img src="./img/eventsnew_04.png"
-            class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
+        <a href="https://moscow.business/social/" target="_blank"><img src="./img/events_social.png"
+            class="rounded-[20px]"></a>
         <div class="h3 font-semibold mt-5 mb-5">Социальное предпринимательство</div>
         <div>19 мая, Цифровое деловое пространство, ул. Покровка, д. 47</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
-        <a href="https://moscow.business/creative/" target="_blank"><img src="./img/eventsnew_01.png"
-            class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
+        <a href="https://moscow.business/creative/" target="_blank"><img src="./img/events_creative.png"
+            class="rounded-[20px]"></a>
         <div class="h3 font-semibold mt-5 mb-5">Будущее креативных индустрий</div>
         <div>26 апреля, Площадка Community, Космодамианская наб., 2</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/innovations/" target="_blank"><img src="./img/eventsnew_02.png"
-            class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
+            class="rounded-[20px]"></a>
         <div class="h3 font-semibold mt-5 mb-5">Встреча с технологическими предпринимателями</div>
         <div>11 апреля, Кластер «Ломоносов» ИНТЦ МГУ «Воробьёвы горы»</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://www.moscow-export.com/biznes-govorit/" target="_blank"><img src="./img/eventsnew_03.png"
-            class="rounded-[20px] md:rounded-[34px] overflow-visible"></a>
+            class="rounded-[20px]"></a>
         <div class="h3 font-semibold mb-5 mt-5">Встреча с экспортерами</div>
         <div>21 марта 2023 года. Цифровое деловое пространство</div>
       </div>
