--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           class="px-7.5 lg:px-12.5 py-10 lg:py-15 bg-gradient-to-r from-black to-transparent space-y-7.5 lg:space-y-15">
           <img class="w-[140px] md:w-[230px] lg:w-[300px]" src="./img/bizgov.svg" alt="">
           <h1 class="-ml-5">
-            <p class="pink-bg px-5 leading-tight inline-block">ЕНС и АвтоУСН</p>
+            <p class="pink-bg px-5 leading-tight inline-block">ЕНС и АвтоУСН:</p>
             <p class="px-5">новый порядок</p>
           </h1>
           <!-- <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов с
