--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </section>
   <!-- Конец блока -->
   <!-- Начало блока -->
-  <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
+  <!-- <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
     <div class="container pink-bg">
       <h2>Ближайшие мероприятия</h2>
       <div
@@ -81,8 +81,8 @@
             <p class="pink-bg px-5 leading-tight inline-block">ЕНС:</p>
             <p class="px-5">новый порядок</p>
           </h1>
-          <!-- <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов с
-                бизнесом</div> -->
+          <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов с
+                бизнесом</div>
           <div class="flex flex-col lg:flex-row gap-y-5 lg:gap-x-20 !mt-10 lg:!mt-20">
             <div>
               Большая Тульская улица,<br>
@@ -98,12 +98,18 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Конец блока -->
   <!-- Начало блока -->
   <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
     <div class="container border border-pink rounded-[20px] md:rounded-[34px]">
       <h2>Как это было</h2>
+      <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
+        <a href="https://moscow.business/nalog/" target="_blank"><img src="./img/events_nalog.png"
+            class="rounded-[20px]"></a>
+        <div class="h3 font-semibold mt-5 mb-5">ЕНС: новый порядок</div>
+        <div>27 июня, Большая Тульская улица, дом 15</div>
+      </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/social/" target="_blank"><img src="./img/events_social.png"
             class="rounded-[20px]"></a>
