--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Открытый диалог с городом по ключевым отраслевым проблемам</title>
-  <link rel="stylesheet" href="./css/style.css?v=23062101">
-  <link rel="stylesheet" href="./css/swiper-bundle.min.css?v=23062101">
+  <link rel="stylesheet" href="./css/style.css?v=23073101">
+  <link rel="stylesheet" href="./css/swiper-bundle.min.css?v=23073101">
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -32,10 +32,10 @@
   </noscript>
   <!-- /Yandex.Metrika counter -->
 
-  <script src="./js/jquery.min.js?v=23062101"></script>
-  <script src="./js/jquery.mask.min.js?v=23062101"></script>
-  <script src="./js/track-cookies.js?v=23062101"></script>
-  <script src="./js/create-object.js?v=23062101"></script>
+  <script src="./js/jquery.min.js?v=23073101"></script>
+  <script src="./js/jquery.mask.min.js?v=23073101"></script>
+  <script src="./js/track-cookies.js?v=23073101"></script>
+  <script src="./js/create-object.js?v=23073101"></script>
 </head>
 
 <body>
@@ -68,29 +68,32 @@
   </section>
   <!-- Конец блока -->
   <!-- Начало блока -->
-  <!-- <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
+  <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
     <div class="container pink-bg">
       <h2>Ближайшие мероприятия</h2>
       <div
         class="container !px-0 !py-0 font-secondary my-5 md:my-7.5 lg:my-10 bg-cover bg-top rounded-none md:rounded-[34px] overflow-hidden"
-        style="background-image: url(./img/top-banner-nalog.jpg);">
+        style="background-image: url(./img/top-banner-krt.jpg);">
         <div
           class="px-7.5 lg:px-12.5 py-10 lg:py-15 bg-gradient-to-r from-black to-transparent space-y-7.5 lg:space-y-15">
           <img class="w-[140px] md:w-[230px] lg:w-[300px]" src="./img/bizgov.svg" alt="">
           <h1 class="-ml-5">
-            <p class="pink-bg px-5 leading-tight inline-block">ЕНС:</p>
-            <p class="px-5">новый порядок</p>
+            <p class="inline-block px-5 leading-tight pink-bg">Комплексное</p>
+            <p class="px-5">развитие территорий</p>
           </h1>
-          <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов с
-                бизнесом</div>
+          <!-- <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов
+            с
+            бизнесом</div> -->
           <div class="flex flex-col lg:flex-row gap-y-5 lg:gap-x-20 !mt-10 lg:!mt-20">
             <div>
-              Большая Тульская улица,<br>
-              дом 15
+              г. Москва, Раменский бульвар, д. 1,<br>
+              Инновационно научно-технологический<br>
+              центр МГУ «Воробьевы горы»,<br>
+              кластер «Ломоносов»
             </div>
             <div>
-              27 июня<br>
-              с 15:00 по 18:00
+              15 августа 2023<br>
+              с 15:00 до 18:00
             </div>
           </div>
           <a href="https://moscow.business/nalog/" target="_blank"
@@ -98,7 +101,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
   <!-- Конец блока -->
   <!-- Начало блока -->
   <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
@@ -107,31 +110,31 @@
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/nalog/" target="_blank"><img src="./img/events_nalog.png"
             class="rounded-[20px]"></a>
-        <div class="h3 font-semibold mt-5 mb-5">ЕНС: новый порядок</div>
+        <div class="mt-5 mb-5 font-semibold h3">ЕНС: новый порядок</div>
         <div>27 июня, Большая Тульская улица, дом 15</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/social/" target="_blank"><img src="./img/events_social.png"
             class="rounded-[20px]"></a>
-        <div class="h3 font-semibold mt-5 mb-5">Социальное предпринимательство</div>
+        <div class="mt-5 mb-5 font-semibold h3">Социальное предпринимательство</div>
         <div>19 мая, Цифровое деловое пространство, ул. Покровка, д. 47</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/creative/" target="_blank"><img src="./img/events_creative.png"
             class="rounded-[20px]"></a>
-        <div class="h3 font-semibold mt-5 mb-5">Будущее креативных индустрий</div>
+        <div class="mt-5 mb-5 font-semibold h3">Будущее креативных индустрий</div>
         <div>26 апреля, Площадка Community, Космодамианская наб., 2</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://moscow.business/innovations/" target="_blank"><img src="./img/eventsnew_02.png"
             class="rounded-[20px]"></a>
-        <div class="h3 font-semibold mt-5 mb-5">Встреча с технологическими предпринимателями</div>
+        <div class="mt-5 mb-5 font-semibold h3">Встреча с технологическими предпринимателями</div>
         <div>11 апреля, Кластер «Ломоносов» ИНТЦ МГУ «Воробьёвы горы»</div>
       </div>
       <div class="grid justify-center mb-5 md:mb-7.5 lg:mb-10">
         <a href="https://www.moscow-export.com/biznes-govorit/" target="_blank"><img src="./img/eventsnew_03.png"
             class="rounded-[20px]"></a>
-        <div class="h3 font-semibold mb-5 mt-5">Встреча с экспортерами</div>
+        <div class="mt-5 mb-5 font-semibold h3">Встреча с экспортерами</div>
         <div>21 марта 2023 года. Цифровое деловое пространство</div>
       </div>
     </div>
@@ -139,7 +142,7 @@
   <!-- Конец блока -->
   <!-- Начало блока -->
   <footer class="wrapper">
-    <div class="container flex gap-5 border-t border-white rounded-none text-small font-bold">
+    <div class="container flex gap-5 font-bold border-t border-white rounded-none text-small">
       <div>©2023</div>
       <div>16+</div>
       <div>Департамент предпринимательства и инновационного развития города Москвы</div>
@@ -147,8 +150,8 @@
   </footer>
   <!-- Конец блока -->
 
-  <script src="./js/swiper-bundle.min.js?v=23062101"></script>
-  <script src="./js/common.js?v=23062101"></script>
+  <script src="./js/swiper-bundle.min.js?v=23073101"></script>
+  <script src="./js/common.js?v=23073101"></script>
 </body>
 
 </html>
