--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               с 15:00 до 18:00
             </div>
           </div>
-          <a href="https://moscow.business/nalog/" target="_blank"
+          <a href="https://moscow.business/krt/" target="_blank"
             class="btn md:absolute md:right-7.5 lg:right-10 md:bottom-7.5 lg:bottom-10 z-10 pink-bg text-white">Зарегистрироваться</a>
         </div>
       </div>
