--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </section>
   <!-- Конец блока -->
   <!-- Начало блока -->
-  <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
+  <!-- <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
     <div class="container pink-bg">
       <h2>Ближайшие мероприятия</h2>
       <div
@@ -81,9 +81,9 @@
             <p class="inline-block px-5 leading-tight pink-bg">Комплексное</p>
             <p class="px-5">развитие территорий</p>
           </h1>
-          <!-- <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов
+          <div class="h3 font-semibold md:max-w-[75%] lg:max-w-[50%]">Честный разговор представителей власти и экспертов
             с
-            бизнесом</div> -->
+            бизнесом</div>
           <div class="flex flex-col lg:flex-row gap-y-5 lg:gap-x-20 !mt-10 lg:!mt-20">
             <div>
               г. Москва, Раменский бульвар, д. 1,<br>
@@ -101,7 +101,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Конец блока -->
   <!-- Начало блока -->
   <section class="wrapper mb-5 md:mb-7.5 lg:mb-10">
